--- a/userauth_service/src/main/resources/application.yml
+++ b/userauth_service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     password: ${POSTGRES_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
